--- a/challenge_day1/git_exercise.ipynb
+++ b/challenge_day1/git_exercise.ipynb
@@ -2,29 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maja.py import get_name()\n",
-    "from martyna.py import string_name()"
+    "from maja import get_name\n",
+    "from martyna import string_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def into_function():\n",
-    "    intro = \"This is team CarPark. We are:\" + get_name() + string_name()\n",
-    "    return intro"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function intro_function at 0x10d536dc0>\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
