--- a/challenge_day1/git_exercise.ipynb
+++ b/challenge_day1/git_exercise.ipynb
@@ -6,31 +6,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maja import get_name\n",
-    "from martyna import string_name"
+    "from maja import get_name as name1\n",
+    "from martyna import string_name as name2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def funct():\n",
+    "    print(f\"This is CarPark. We are {get_name()}, {string_name()}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function intro_function at 0x10d536dc0>\n"
+      "This is CarPark. We are Maja, Martyna\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "funct()"
+   ]
   }
  ],
  "metadata": {
