--- a/challenge_day1/git_exercise.ipynb
+++ b/challenge_day1/git_exercise.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maja import get_name as name1\n",
-    "from martyna import string_name as name2\n",
-    "from Vincent import name as name3"
+    "from maja import get_name \n",
+    "from martyna import string_name \n",
+    "from Vincent import name "
    ]
   },
   {
