--- a/challenge_day3/challenge_day3.ipynb
+++ b/challenge_day3/challenge_day3.ipynb
@@ -40,9 +40,10 @@
     "# List three observations of all inputs (not sample inputs) observed at the same time\n",
     "# Format: (time: str, station1_input: int, station2_input: str, station3_input: int, station4_input: int, station5_input: str, station6_input: int, station7_input: str)\n",
     "# Example: ('12:30:00', 1, '1990-01-01', 2, 3, \"John\", 4, \"e=mc^2\")\n",
-    "observation1 = ...\n",
-    "observation2 = ...\n",
-    "observation3 = ...\n",
+    "\n",
+    "observation1 = ('12:25:12', station1_input: 99, station2_input: '2024-05-12', station3_input: 39416, station4_input: 3941, station5_input: 'Sahir', station6_input: 39, station7_input: 'a+c+b')\n",
+    "observation2 = ('12:25:20', station1_input: 99, station2_input: '2024-02-15', station3_input: 78510, station4_input: 7851, station5_input: 'Charlie', station6_input: 78, station7_input: 'b+e')\n",
+    "observation3 = ('12:25:30', station1_input: 35, station2_input: '2024-02-26', station3_input: 44121, station4_input: 4412, station5_input: 'Gonzalo', station6_input: 44, station7_input: 'd+b+e')\n",
     "\n",
     "def combined_algorithm(observations: tuple) -> int:\n",
     "    output1 = solution_station_1(observations[1])\n",
