--- a/challenge_day3/challenge_day3.ipynb
+++ b/challenge_day3/challenge_day3.ipynb
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (957798648.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 14\u001b[0;36m\u001b[0m\n\u001b[0;31m    observation1 = ('12:25:12', station1_input: 98, station2_input: '2024-05-12', station3_input: 39416, station4_input: 3941, station5_input: 'Sahir', station6_input: 39, station7_input: 'a+c+b')\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "from tests import tests\n",
     "from station1 import solution_station_1\n",
@@ -41,9 +50,9 @@
     "# Format: (time: str, station1_input: int, station2_input: str, station3_input: int, station4_input: int, station5_input: str, station6_input: int, station7_input: str)\n",
     "# Example: ('12:30:00', 1, '1990-01-01', 2, 3, \"John\", 4, \"e=mc^2\")\n",
     "\n",
-    "observation1 = ('12:25:12', station1_input: 99, station2_input: '2024-05-12', station3_input: 39416, station4_input: 3941, station5_input: 'Sahir', station6_input: 39, station7_input: 'a+c+b')\n",
-    "observation2 = ('12:25:20', station1_input: 99, station2_input: '2024-02-15', station3_input: 78510, station4_input: 7851, station5_input: 'Charlie', station6_input: 78, station7_input: 'b+e')\n",
-    "observation3 = ('12:25:30', station1_input: 35, station2_input: '2024-02-26', station3_input: 44121, station4_input: 4412, station5_input: 'Gonzalo', station6_input: 44, station7_input: 'd+b+e')\n",
+    "observation1 = ('12:25:12', 99, '2024-05-12', 39416, 3941, 'Sahir', 39, 'a+c+b')\n",
+    "observation2 = ('12:25:20', 99, '2024-02-15', 78510, 7851, 'Charlie', 78, 'b+e')\n",
+    "observation3 = ('12:25:30', 35, '2024-02-26', 44121, 4412, 'Gonzalo', 44, 'd+b+e')\n",
     "\n",
     "def combined_algorithm(observations: tuple) -> int:\n",
     "    output1 = solution_station_1(observations[1])\n",
@@ -85,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
